--- a/src/app/home/home.page.html
+++ b/src/app/home/home.page.html
@@ -1,14 +1,32 @@
 <ion-header>
-  <ion-toolbar>
+  <ion-toolbar color="primary">
     <ion-title>
-      Ionic Blank
+      Weekly Weather Forecast
     </ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-  <div class="ion-padding">
-    The world is your oyster.
-    <p>If you get lost, the <a target="_blank" rel="noopener" href="https://ionicframework.com/docs/">docs</a> will be your guide.</p>
-  </div>
+
+<ion-item>
+	<ion-searchbar [(ngModel)]="searchTerm" (ionChange)="searchChanged($event)" [(ngModel)]="city"></ion-searchbar>
+</ion-item>
+
+
+<ion-list *ngFor="let weather of weathers">
+	<ion-item>
+	<ion-avatar slot="start">
+		<img src="https://openweathermap.org/img/w/{{weather.weather[0].icon}}.png">
+	</ion-avatar>
+	<ion-label>
+		<h2>{{city}}</h2>
+		<h5>{{weather.dt*1000 | date:'medium'}}</h5>
+		<p>{{weather.temp.day -273.15 | number:'0.2-2'}} &deg; C</p>
+		<p>{{weather.weather[0].description}}</p>
+	</ion-label>
+	<ion-button fill="outline" slot="end" routerLink="/details">View Details</ion-button>
+</ion-item>
+</ion-list>
+
+
 </ion-content>
