--- a/src/app/details/details.page.html
+++ b/src/app/details/details.page.html
@@ -1,29 +1,34 @@
 <ion-header>
   <ion-toolbar color="secondary">
-    <ion-title>City Date Details</ion-title>
+
+  	<ion-buttons slot="start">
+  		<ion-back-button></ion-back-button>
+  	</ion-buttons>
+
+    <ion-title>{{city}} Details</ion-title>
   </ion-toolbar>
 </ion-header>
 
 <ion-content padding>
 
-	<ion-card>
+	<ion-card *ngIf="weather">
 		<ion-card-header>
-			<ion-card-title>Weather Icon</ion-card-title>
-			<ion-card-subtitle>City</ion-card-subtitle>
+			<ion-card-title><img src="https://openweathermap.org/img/w/{{weather.weather[0].icon}}.png"></ion-card-title>
+			<ion-card-subtitle>{{city}}</ion-card-subtitle>
 		</ion-card-header>
 
 		<ion-card-content>
 			<ion-item>
 			<ion-icon name="thermometer"></ion-icon>
-			<ion-label>30 degree</ion-label>
+			<ion-label>{{weather.temp.day -273.15 | number:'0.2-2'}} &deg; C</ion-label>
 		</ion-item>
 		<ion-item>
 			<ion-icon name="document"></ion-icon>
-			<ion-label>description</ion-label>
+			<ion-label>{{weather.weather[0].description}}</ion-label>
 		</ion-item>
 		<ion-item>
 			<ion-icon name="water"></ion-icon>
-			<ion-label>humidity</ion-label>
+			<ion-label>{{weather.humidity}}</ion-label>
 		</ion-item>
 		</ion-card-content>
 	</ion-card>
